# nyc-buildings

./: .eslintrc  .gitignore  .prettierrc.js  README.md  bundle.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lib/process-buildings/: Cargo.toml  decode.ts  encode.ts  stream-decoder.ts  streamer.ts
lib/process-buildings/src/: main.rs
models/: bin-to-bbl.csv  building-test.geojson  building-test.gml  building-test.surfaces.binary  building-test.triangles.binary  building-test.vertices.binary  manhattan.pluto.filtered.csv
models/mn_mappluto_17v1_1/: MNMapPLUTO.BBL.atx  MNMapPLUTO.CD.atx  MNMapPLUTO.LandUse.atx  MNMapPLUTO.ZoneDist1.atx  MNMapPLUTO.sbn  MNMapPLUTO.sbx  MNMapPLUTO.shp.xml  MNMapPLUTO.shx  MN_Dcp_Mappinglot.dbf  MN_Dcp_Mappinglot.shp.xml  mn_pluto.dbf  (+1 more)
scripts/: binary-triangles-to-strips.js  count-buildings-surface-positions.js  count-buildings.js  filter-bin-bbl-map.js  filter-gml-to-manhattan.js  filter-pluto-data.js  gml-to-binary-triangles.js  gml-to-binary-vertices.js  gml-to-building-triangles.js  gml-to-deduped-positions.js  gml-to-indexed-building-triangles.js  gml-to-positions.js  gml-to-surfaces.js  gml2obj.js  in-progress.js  tum-gml-to-building-triangles.js
src/: 3d-view-controls.d.ts  browser-warning.js  building-classes.js  buildings.render.ts  camera-positions.js  create-buffers.js  create-buttons.js  create-mesh.js  create-roaming-camera.js  create-state-transitioner.js  index.js  load-data.js  main.ts  munge-data.js  render-buildings.js  render-fxaa.js  render-loader.js  stream-decoder.ts
