[package]
name = "process-buildings"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bytebuffer = "2.1.1"
clap = { version = "4.1.6", features = ["derive"] }
earcutr = "0.4.1"
nom = "7.1.3"
